# mucom88-js

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
example/: index.mjs  package-lock.json  package.json
lib/: mucom88.d.ts
src/: api.cpp  cmd.ts  detect-encoding.ts  index.ts  module.ts  rateconv.cpp  rateconv.h
